--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/emtechgamewbgl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/emtechgamewbgl.data.gz",
-        frameworkUrl: buildUrl + "/emtechgamewbgl.framework.js.gz",
-        codeUrl: buildUrl + "/emtechgamewbgl.wasm.gz",
+        dataUrl: buildUrl + "/emtechgamewbgl.data",
+        frameworkUrl: buildUrl + "/emtechgamewbgl.framework.js",
+        codeUrl: buildUrl + "/emtechgamewbgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "CGI",
         productName: "Emtech Game",
