videos from usl

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/emtechgamewbgl.loader.js";
+      var loaderUrl = buildUrl + "/emtechgamewebgl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/emtechgamewbgl.data",
-        frameworkUrl: buildUrl + "/emtechgamewbgl.framework.js",
-        codeUrl: buildUrl + "/emtechgamewbgl.wasm",
+        dataUrl: buildUrl + "/emtechgamewebgl.data",
+        frameworkUrl: buildUrl + "/emtechgamewebgl.framework.js",
+        codeUrl: buildUrl + "/emtechgamewebgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "CGI",
         productName: "Emtech Game",
